# Claude-Code-Kit

./: .gitignore  ANALYSIS_REPORT.md  CLAUDE.md  REFACTORING-PLAN.md  REFACTORING-REPORT.md  SCENARIOS.md  claude-code-project-structure.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude-workspace/: current-task.md  decisions.md  features.json  progress.md  session-log.txt  state.json
.claude-workspace/archive/: 2025-12-07-web2md.md  2025-12-20-rostics-menu-assistant.md
.claude/agents/: code-agent.md  dev-agent.md  doc-agent.md  explore-agent.md  lead-agent.md  review-agent.md  test-agent.md
.claude/commands/: code-review.md  complete-task.md  create-plan.md  done.md  fix-issue.md  implement.md  init-project.md  plan-task.md  plan.md  project-status.md  quick-fix.md  review-task.md  review.md  status.md  test.md
.claude/hooks/: validate-bash.sh
docs/: AGENTS.md  COMMANDS.md  README.md  WORKFLOW.md
docs/agents/: code-agent.md  lead-agent.md  review-agent.md  test-agent.md
kfc-assistant/: README.md  background.js  content.js  manifest.json  parser.js  popup.css  popup.html  popup.js  storage.js
src/: cli.py  storage.py  task.py
src/web2md/: __init__.py  __main__.py  cli.py  converter.py  core.py  exceptions.py  extractor.py  fetcher.py
tests/: conftest.py  test_cli.py  test_converter.py  test_core.py  test_exceptions.py  test_extractor.py  test_fetcher.py  test_storage.py  test_task.py
полезное/: claude-code-kit-refactoring-plan-v2.md  исследование.md
